--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "com.unity.feature.2d": "1.0.0",
+    "com.unity.ai.navigation": "1.1.4",
+    "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.mobile.android-logcat": "1.3.2",
